Fixes to light mode and dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #2e1065; 
+    --background: #1e1e1e; 
     --foreground: #ffffff;
   }
 }
